security-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: storageAccount
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
    supplementalGroups: [4000]
  volumes:
    - name: webserver-vol
      emptyDir: {}
  containers:
    - name: webserver-vol
      image: busybox:1.28
      command: ["sh", "-c", "sleep 1h"]
      volumeMounts:
        - name: sec-ctx-vol
          mountPath: /usr/share/nginx/html
      securityContext:
        allowPrivilegeEscalation: false
