sample-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clear-nginx-deployment
spec:
  selector:
    matchLabels:
      app: clear-nginx
  template:
    metadata:
      labels:
        app: clear-nginx
    spec:
      containers:
        - name: clear-nginx
          image: clearlinux/nginx
          volumeMounts:
            - mountPath: /var/www/html
              name: site-data
          ports:
            - containerPort: 80
      volumes:
        - name: site-data
          persistentVolumeClaim:
            claimName: demo-pvc-claim
---
apiVersion: v1
kind: Service
metadata:
  name: clear-nginx-service
  namespace: webserver
spec:
  selector:
    app: clear-nginx # app labels from deployment.yaml
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
