service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: webserver

spec:
  selector:
    app: webserver # app labels from deployment.yaml
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
