nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`192.168.250.1`)
      kind: Rule
      services:
        - name: nginx
          port : 80
